# fastapi_healthcheck_mongodb

./: README.md  pyproject.toml
fastapi_healthcheck_mongodb/: __init__.py  service.py
